   to version.
     __________________________________________________________________

  New in version 3.11:

     * Added --with-soft-rlimits-only option based on patch from
       jplinderman@sf.net
     * Added --with-block-svn-paths and --with-block-cvs-paths options to
       prevent execution of files in those dirs.
     * Added --with-eruby-interpreter option from BlackSun, Inc.

  New in version 3.10:

     * Applied several patches from Javier Fernandez-Sanguino Pen~a for
       information release security. Removes additional output when quiet
       errors is enabled.
     * Fixed setting of LD_LIBRARY_PATH when configured to do so.
     * Fixed setting of ARGV for both regular and interpreted scripts when
       script is in a subdir. Clean up code related to this based on a
       patch from Jack .
     * Updated autoconf helpers to much newer release

  New in version 3.9:

     * Fixed a minor typo preventing allow files from working
     * Added support for +@netgroup syntax optionally in allow/deny files.
     * Fixed problem with php-nonexec-only not working properly since exec
       check done too late.
     * Applied Piotr's patch few support of newer PHP versions.
     * Added support for ASP interpreter execution, similar to PHP
       support.
     * Fix content of PATH_INFO when it should be / or undefined. Based on
       patch from Cliff Woolley.

  New in version 3.8:

     * Merged in special handling for PHP scripts by popular demand. This
       is based mostly on Piotr Klaban's php-cgiwrap patch, with minor
       changes.
     * Added options for php support. --with-php-interpreter and
       --with-php-cgiwrap
     * Rewrote the path translated support. Is it finally correct?
     * Patch from san@cobalt.rmnet.it to use REDIRECT_URL if available for
       SCRIPT_NAME.
     * Added support for access control files specific to each HTTP_HOST,
       useful for ISP's using Apache handlers to run cgi's that want to