@@ -9,6 +9,8 @@ to version.
 	<LI>Added --with-soft-rlimits-only option based on patch from jplinderman@sf.net
 	<LI>Added --with-block-svn-paths and --with-block-cvs-paths options to prevent execution of files in those dirs.
 	<LI>Added --with-eruby-interpreter option from BlackSun, Inc.
+	<LI>Added support for setting SIGXCPU even when sigset unavailable - from BlackSun, Inc.
+	<LI>Fixed some warnings.
 </UL>
 
 <P><H3>New in version 3.10:</H3><UL>
