@@ -11,6 +11,9 @@
      * Added --with-block-svn-paths and --with-block-cvs-paths options to
        prevent execution of files in those dirs.
      * Added --with-eruby-interpreter option from BlackSun, Inc.
+     * Added support for setting SIGXCPU even when sigset unavailable -
+       from BlackSun, Inc.
+     * Fixed some warnings.
 
   New in version 3.10:
 
